--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,14 @@ body {
     margin: 0;
     font-family: Georgia, Arial, Helvetica, sans-serif;
     color: #444444;
-    font-size: 18px;
+    font-size: 16px;
 }
 
 footer {
     background: linear-gradient(rgba(0, 0, 0, 0.7),
             rgba(0, 0, 0, 0.7)), url("../media/footer.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
     margin: 0;
     padding: 0;
     text-align: center;
@@ -19,19 +21,33 @@ footer {
     font-size: medium;
 }
 
-#logo-img {
-    margin: 16px;
-    height: 30px;
+#logo-img1,
+#logo-img2,
+#logo-img3 {
+    height: 1.875em;
     display: block;
     position: fixed;
+    top: 1em;
     z-index: 2;
+}
+
+#logo-img1 {
+    left: 1.25em;
+}
+
+#logo-img2 {
+    left: 8.125em;
+}
+
+#logo-img3 {
+    left: 15.625em;
 }
 
 #navigation-bar {
     margin: 0;
     text-align: center;
     background-color: white;
-    box-shadow: 0px 8px 5px -5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0em 0.5em 0.3125em -0.3125em rgba(0, 0, 0, 0.2);
     z-index: 1;
     position: -webkit-sticky;
     /* Safari */
@@ -49,7 +65,7 @@ footer {
 #navigation-bar li {
     display: inline-block;
     margin: 0;
-    padding: 20px 0;
+    padding: 1.25em 0;
     list-style: none;
 }
 
@@ -60,12 +76,12 @@ footer {
 
 #navigation-bar a {
     color: #444444;
-    font-size: 20px;
+    font-size: 1.25em;
     text-decoration: none;
     position: relative;
     bottom: 0;
     transition: all 0.3s ease;
-    padding: 20px 10px;
+    padding: 1em 0.625em;
     margin: 0;
 }
 
@@ -80,45 +96,73 @@ footer {
     right: 50%;
     left: 50%;
     bottom: 0;
-    height: 2px;
+    height: 0.125em;
     background-color: #0054a6;
 }
 
 #navigation-bar a {
     color: #444444;
-    font-size: 20px;
+    font-size: 1.25em;
     text-decoration: none;
 }
 
 #about-company-container {
-    text-align: center;
+    text-align: left;
     margin: auto;
     width: 50%;
+    margin-bottom: 1.25em;
 }
 
-#about-company-header, #about-company-title, .about-company-txt, #about-company-video-container{
-    padding: 10px;
+#about-company-header {
+    padding: 0;
     margin: 0;
 }
 
+#about-company-title {
+    text-align: center;
+}
+
+.about-company-txt {
+    text-align: center;
+}
+
 #about-company-video {
-    width: 100%;
-    height: 600px;
+    display: block;
+    margin: auto;
+    width: 90%;
+    height: 35em;
+}
+
+#details-container {
+    background-color: #eeeeee;
+}
+
+#details-content {
+    display: block;
+    width: 50%;
+    margin: auto;
+    padding: 1.25em 0 2.5em 0;
+}
+
+.details-title {
+    text-align: center;
+    padding: 0.625em 0;
+    margin: 0;
 }
 
 #contact-us {
-    padding: 10px;
+    padding: 0.625em;
 }
 
 #contact-us-header {
     margin: 0;
-    padding: 10px;
-    font-size: 30px;
+    padding: 0.625em;
+    font-size: 1.875em;
 }
 
 #contacts {
     font-size: medium;
-    padding: 5px;
+    padding: 0;
     margin: auto;
     text-align: center;
 }
@@ -129,8 +173,40 @@ footer {
     display: inline-block;
 }
 
+.contacts-address-txt,
+.contacts-column-title,
+.contacts-column-ref {
+    margin: 0;
+    padding: 0.3125em;
+}
+
 #copyright {
     clear: both;
-    padding: 5px;
+    padding: 0.3125em;
     background-color: #282a2b;
+}
+
+@media only screen and (max-width: 90em) {
+
+    #logo-img1,
+    #logo-img2,
+    #logo-img3 {
+        visibility: hidden;
+    }
+
+    #about-company-container, #details-content {
+        width: 90%;
+    }
+
+    #navigation-bar li {
+        padding: 0.75em 0;
+    }
+
+    #navigation-bar a {
+        padding: 0.6em 0.3125em;
+    }
+
+    #about-company-video {
+        height: 28em;
+    }
 }
