--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 footer {
     background: linear-gradient(rgba(0, 0, 0, 0.7),
-            rgba(0, 0, 0, 0.7)), url("../media/footer.jpg");
+            rgba(0, 0, 0, 0.7)), url("media/footer.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     margin: 0;
