--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,16 @@ body {
 footer {
     background: linear-gradient(rgba(0, 0, 0, 0.7),
             rgba(0, 0, 0, 0.7)), url("media/footer.jpg");
-    background-repeat: no-repeat;
     background-position: center center;
     margin: 0;
     padding: 0;
     text-align: center;
     color: #aeaeae;
     font-size: medium;
+}
+
+#tab-logo {
+    height: 50%;
 }
 
 #logo-img1,
@@ -143,7 +146,7 @@ footer {
     background-color: #eeeeee;
 }
 
-#details-content {
+#details-content, #quality-content, #contacts-content {
     display: block;
     width: 50%;
     margin: auto;
@@ -154,6 +157,108 @@ footer {
     text-align: center;
     padding: 0.625em 0;
     margin: 0;
+}
+
+#products-container {
+    margin: 0;
+    padding: 0;
+}
+
+#products-header, #quality-header {
+    margin: 0;
+    padding: 100px 0;
+    text-align: center;
+}
+
+#products-header {
+    background: linear-gradient(rgba(0, 0, 0, 0.2),
+            rgba(0, 0, 0, 0.2)), url("media/products.jpg");
+            background-position: center 750px;
+}
+
+#quality-header {
+    background: linear-gradient(rgba(0, 0, 0, 0.5),
+            rgba(0, 0, 0, 0.5)), url("media/quality.jpg");
+            background-position: center 1100px;
+}
+
+#products-title, #quality-title {
+    color: white;
+    text-align: center;
+    font-size: 2.5em;
+}
+
+.products-file-name {
+    text-align: center;
+}
+
+.products-file {
+    width: 100%;
+    height: 600px;
+}
+
+.products-table table {
+    border-collapse: collapse;
+    width: 879px;
+    margin: auto;
+}
+
+.products-table table, th, td {
+    text-align: center;
+    padding: 5px;
+    border: 1px solid black;
+}
+
+#quality-content {
+    text-align: center;
+}
+
+.quality-txt {
+    text-align: left;
+}
+
+#quality-list {
+    text-align: left;
+}
+
+#quality-certificates-container {
+    display: inline-block;
+    text-align: center;
+    margin: 0 -50%;
+}
+
+.quality-certificate {
+    display: inline-block;
+    height: 600px;
+    width: auto;
+    margin: 10px;
+}
+
+#contacts-content {
+    text-align: center;
+}
+
+#contacts-form {
+    margin: 0 -50%;
+}
+
+.contacts-form-column {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.contacts-fname {
+    text-align: left;
+    padding: 0;
+    margin: 0;
+}
+
+.contacts-finput {
+    display: block;
+}
+
+#contacts-fmessage {
+    width: 600px;
 }
 
 #contact-us {
@@ -192,7 +297,7 @@ footer {
     background-color: #282a2b;
 }
 
-@media only screen and (max-width: 90em) {
+@media only screen and (max-width: 80em) {
 
     #logo-img1,
     #logo-img2,
@@ -200,7 +305,8 @@ footer {
         visibility: hidden;
     }
 
-    #about-company-container, #details-content {
+    #about-company-container,
+    #details-content {
         width: 90%;
     }
 
