--- a/styles.css
+++ b/styles.css
@@ -166,20 +166,20 @@ footer {
 
 #products-header, #quality-header {
     margin: 0;
-    padding: 100px 0;
+    padding: 6.25em 0;
     text-align: center;
 }
 
 #products-header {
     background: linear-gradient(rgba(0, 0, 0, 0.2),
             rgba(0, 0, 0, 0.2)), url("media/products.jpg");
-            background-position: center 750px;
+            background-position: center 46.875em;
 }
 
 #quality-header {
     background: linear-gradient(rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)), url("media/quality.jpg");
-            background-position: center 1100px;
+            background-position: center 68.75em;
 }
 
 #products-title, #quality-title {
@@ -194,19 +194,7 @@ footer {
 
 .products-file {
     width: 100%;
-    height: 600px;
-}
-
-.products-table table {
-    border-collapse: collapse;
-    width: 879px;
-    margin: auto;
-}
-
-.products-table table, th, td {
-    text-align: center;
-    padding: 5px;
-    border: 1px solid black;
+    height: 37.5em;
 }
 
 #quality-content {
@@ -229,9 +217,9 @@ footer {
 
 .quality-certificate {
     display: inline-block;
-    height: 600px;
+    height: 37.5em;
     width: auto;
-    margin: 10px;
+    margin: 0.625em;
 }
 
 #contacts-content {
@@ -244,7 +232,7 @@ footer {
 
 .contacts-form-column {
     display: inline-block;
-    margin: 0 10px;
+    margin: 0 0.625em;
 }
 
 .contacts-fname {
@@ -258,7 +246,7 @@ footer {
 }
 
 #contacts-fmessage {
-    width: 600px;
+    width: 37.5em;
 }
 
 #contact-us {
@@ -320,5 +308,18 @@ footer {
 
     #about-company-video {
         height: 28em;
+        width: 100%;
+    }
+
+    #details-content, #quality-content, #contacts-content {
+        width: 90%;
+    }
+
+    #contacts-form {
+        margin: 0;
+    }
+
+    #contacts-fmessage {
+        width: 23.75em;
     }
 }
