Pdf files named

--- a/styles.css
+++ b/styles.css
@@ -293,6 +293,10 @@ footer {
         visibility: hidden;
     }
 
+    #navigation-bar {
+        position: static;
+    }
+
     #about-company-container,
     #details-content {
         width: 90%;
