--- a/styles.css
+++ b/styles.css
@@ -146,7 +146,9 @@ footer {
     background-color: #eeeeee;
 }
 
-#details-content, #quality-content, #contacts-content {
+#details-content,
+#quality-content,
+#contacts-content {
     display: block;
     width: 50%;
     margin: auto;
@@ -164,7 +166,8 @@ footer {
     padding: 0;
 }
 
-#products-header, #quality-header {
+#products-header,
+#quality-header {
     margin: 0;
     padding: 6.25em 0;
     text-align: center;
@@ -173,16 +176,17 @@ footer {
 #products-header {
     background: linear-gradient(rgba(0, 0, 0, 0.2),
             rgba(0, 0, 0, 0.2)), url("media/products.jpg");
-            background-position: center 46.875em;
+    background-position: center 46.875em;
 }
 
 #quality-header {
     background: linear-gradient(rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)), url("media/quality.jpg");
-            background-position: center 68.75em;
+    background-position: center 68.75em;
 }
 
-#products-title, #quality-title {
+#products-title,
+#quality-title {
     color: white;
     text-align: center;
     font-size: 2.5em;
@@ -192,9 +196,14 @@ footer {
     text-align: center;
 }
 
-.products-file {
+.products-file-pc,
+.products-file-mobile {
     width: 100%;
     height: 37.5em;
+}
+
+.products-file-mobile {
+    display: none
 }
 
 #quality-content {
@@ -315,8 +324,20 @@ footer {
         width: 100%;
     }
 
-    #details-content, #quality-content, #contacts-content {
+    #details-content,
+    #quality-content,
+    #contacts-content {
         width: 90%;
+    }
+
+    #quality-certificates-container {
+        width: 100%;
+    }
+
+    .quality-certificate {
+        width: 100%;
+        height: auto;
+        margin: 0.625em 0;
     }
 
     #contacts-form {
@@ -324,6 +345,18 @@ footer {
     }
 
     #contacts-fmessage {
-        width: 23.75em;
+        width: auto;
+    }
+
+    @media only screen and (hover: none) and (pointer: coarse) {
+
+        .products-file-pc {
+            display: none;
+        }
+
+        .products-file-mobile {
+            display: inline;
+        }
+
     }
 }
