Colors updated in footer

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ body {
 }
 
 footer {
-    background: linear-gradient(rgba(0, 0, 0, 0.45),
-            rgba(0, 0, 0, 0)), url("media/footer.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 0.3)), url("media/footer.jpg");
     background-position: center center;
     margin: 0;
     padding: 0;
@@ -144,7 +144,7 @@ footer {
 }
 
 #details-container {
-    background-color: #eeeeee;
+    background-color: #e9ecf0;
 }
 
 #details-content,
@@ -271,12 +271,12 @@ footer {
 }
 
 #contact-us {
-    color: rgb(192, 214, 223);
+    color: rgb(227, 241, 247);
     padding: 0.625em;
 }
 
 #contact-us-header {
-    color: rgb(227, 241, 247);
+    color: white;
     margin: 0;
     padding: 0.625em;
     font-size: 1.875em;
@@ -303,11 +303,11 @@ footer {
 }
 
 .contacts-column-ref a:link {
-    color: rgb(227, 241, 247);
+    color: white;
 }
 
 #copyright {
-    color: rgb(192, 214, 223);
+    color: rgb(227, 241, 247);
     clear: both;
     padding: 0.3125em;
     background-color: #134774;
